# PointCloudUtils

./: .gitignore  CMakeLists.txt  calculate_centroids.py  colmap.py  convert_bit.py  convert_mov.py  convert_to_3dgs.py  curveture_analyzer.py  equirectangular2fisheye.py  equirectangular2pinhole.py  export_ply.py  extract_xyz.py  mls.cpp  optimize.py  preprocess.py  pyproject.toml  ransac.py  region_growing.cpp  rotate_sample.py  scale.py  visualize_thinning_result.py
archive/: caliblation.py  ransac.py  ransac2.py  ransac3.py  ransac4.py  ransac_ellipsoid.py  ransac_ply.py  ransac_sphere.py  sphere_detection.cpp  test_colored_point_clouds.py  visualize_thinning_simple.py
centroids/: centroid_statistics.txt  centroids.ply  centroids.xyz
docs/: curvature_results.txt
sample_data/: grapes.csv  grapes.xyz
