[project]
name = "ply"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "3dgs-edit-tools>=0.3.0",
    "japanize-matplotlib>=1.1.3",
    "numpy>=2.2.4",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pycolmap>=3.12.4",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
